<resources>
    <string name="app_name">Admin Cruz Roja</string>
    <string name="administrador">ADMINISTRADOR</string>
    <string name="cruz_roja_mexicana">Cruz Roja Mexicana</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="iniciar_sesi_n2">Iniciar Sesión</string>
    <string name="crear_cuenta2">Crear Cuenta</string>
    <string name="ingresa_tus_datos_o_inicia_sesi_n">Ingresa tus datos o inicia sesión</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="iniciar_sesi_n3">Iniciar Sesión</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesi_n_admin">Iniciar Sesión Admin</string>
    <string name="inicia_sesi_n_o_crea_tu_cuenta">Inicia Sesión o crea tu cuenta</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="tu_contrase_a">Tu Contraseña</string>
    <string name="tu_email">Tu Email</string>
    <string name="email3">email</string>
    <string name="su_cuenta_ha_sido_creada_con_xito">Su Cuenta Ha Sido Creada Con Éxito Espere a que el Admin lo Apruebe</string>
    <string name="iniciar_sesi_n4">Iniciar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tu_email4">Tu Email</string>
    <string name="tu_contrase_a5">Tu Contraseña</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="bienvenido_admin">Bienvenido Admin</string>
    <string name="qu_quieres_hacer">¿Qué quieres hacer?</string>
    <string name="calle_n_mero_piso">calle, número, piso</string>
    <string name="eliminar">eliminar</string>
    <string name="guardar">guardar</string>
    <string name="recuperar">recuperar</string>
    <string name="tel_fono">Teléfono</string>
    <string name="ver_usuarios">Ver Usuarios</string>
    <string name="usuarios_pendientes_de_aprobaci_n">Usuarios Prro endientes de Aprobación</string>
    <string name="aprobar">Aprobar</string>
    <string name="nombre_del_usuario">Nombre del Usuario</string>
    <string name="email_del_usuario">Email del Usuario</string>
    <string name="tu_nombre">Tu nombre</string>
    <string name="nombre5">Nombre</string>
    <string name="tu_contrase_a6">Tu Contraseña</string>
    <string name="repite_tu_password">Repite tu Password</string>
    <string name="ajustes">Ajustes</string>
    <string name="anuncios">Anuncios</string>
    <string name="cerrar_sesi_n6">Cerrar Sesión</string>
    <string name="dashboard">dashboard</string>
    <string name="horas_de_servicio_social">Horas de servicio social</string>
    <string name="bienvenido_admin5">Bienvenido Admin</string>
    <string name="qu_quieres_hacer5">¿Qué quieres hacer?</string>
    <string name="horas_acreditadas">Horas acreditadas:</string>
    <string name="fecha_del_evento">Fecha del evento:</string>
    <string name="imagen_del_anuncio">Imagen del anuncio</string>
    <string name="nuevo_anuncio">Nuevo anuncio</string>
    <string name="seleccionar_fecha">Seleccionar fecha *</string>
    <string name="agregar_imagen">Agregar imagen</string>
    <string name="crear_anuncio">Crear anuncio</string>
    <string name="es_un_evento">Es un evento</string>
    <string name="descripcion">Descripción</string>
    <string name="titulo">Título *</string>
</resources>